--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,16 @@ services:
     restart: always
     hostname: gitlab.example.com
     ports:
-      - "8080:80"
+      - "80:80"
       - "443:443"
     volumes:
       - /srv/gitlab/config:/etc/gitlab
       - /srv/gitlab/logs:/var/log/gitlab
       - /srv/gitlab/data:/var/opt/gitlab
+
+# docker exec -it <container_name> gitlab-rails console
+
+# user = User.where(id: 1).first
+# user.password = 'new_pass'
+# user.password_confirmation = 'new_pass'
+# user.save!
